<resources>
    <string name="app_name">H5StatsTracker</string>
    <string name="gamertag_hint">XBox Live Gamertag</string>
    <string name="submit">Submit</string>

    <string name="service_record">Multiplayer Summary</string>
    <string name="gamertag_title">Log In</string>
    <string name="gamertag_input_error">Invalid Gamertag</string>
    <string name="gamertag_not_logged_in">Not Logged In</string>

    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>

    <!-- Service Record Summary -->
    <string name="arena_stats">Arena Stats</string>
    <string name="custom_stats">Custom Stats</string>
    <string name="warzone_stats">Warzone Stats</string>
    <string name="campaign_stats">Campaign Stats</string>
    <string name="medals">Medals</string>
    <string name="commendations">Commendations</string>
    <string name="weapons">Weapons</string>

    <string name="sr">SR</string>
    <string name="top_csr">TOP CSR</string>
    <string name="kd">K/D</string>
    <string name="kills">KILLS</string>
    <string name="deaths">DEATHS</string>
    <string name="boss_takedowns">BOSS TAKEDOWNS</string>
    <string name="legendary_boss_takedowns">LEGENDARY BOSS TAKEDOWNS</string>
    <string name="standard_boss_takedowns">STANDARD BOSS TAKEDOWNS</string>
    <string name="playtime">PLAYTIME</string>
    <string name="games_completed">GAMES COMPLETED</string>
    <string name="core_destruction_victories">CORE DESTRUCTION VICTORIES</string>
    <string name="bases_captured">BASES CAPTURED</string>
    <string name="last_games">LAST %d GAMES</string>
    <string name="total_wins">TOTAL WINS</string>
    <string name="total_losses">TOTAL LOSSES</string>
    <string name="total_ties">TOTAL TIES</string>
    <string name="win_percentage">WIN PERCENTAGE</string>
    <string name="assassinations">ASSASSINATIONS</string>
    <string name="headshots">HEADSHOTS</string>
    <string name="assists">ASSISTS</string>
    <string name="top_variant">TOP VARIANT</string>
    <string name="solo">SOLO</string>
    <string name="coop">COOP</string>
    <string name="campaign_completion">COLLECTIBLE COMPLETION</string>
    <string name="campaign_collectible_skulls">SKULLS</string>
    <string name="campaign_collectible_mission_intel">MISSION INTEL</string>
    <string name="campaign_c">--</string>
    <string name="accuracy">ACCURACY</string>
    <string name="shots_landed">SHOTS LANDED</string>
    <string name="shots_fired">SHOTS FIRED</string>

    <string name="multiplayer_playtime">MULTIPLAYER PLAYTIME</string>
    <string name="multiplayer_games_completed">MULTIPLAYER GAMES COMPLETED</string>
    <string name="multiplayer_kd">MULTIPLAYER K/D</string>
    <string name="multiplayer_win_percentage">MULTIPLAYER WIN PERCENTAGE</string>
    <string name="multiplayer_assassinations">MULTIPLAYER ASSASSINATIONS</string>
    <string name="multiplayer_headshots">MULTIPLAYER HEADSHOTS</string>
    <string name="multiplayer_assists">MULTIPLAYER ASSISTS</string>
</resources>
