<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_gravity="center_horizontal"
              android:layout_width="@dimen/service_report_width"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/sr"
            android:id="@+id/service_rank" />
    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/progress_bar"
            android:id="@+id/xp_progress_bar"
            android:indeterminate="false"
            android:progress="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.AppCompat.Body2"
              android:id="@+id/xp_progress_text" />
    <GridLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:columnCount="@integer/service_report_column_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="@dimen/service_report_column_width"
                      android:layout_height="wrap_content">
            <TextView android:id="@+id/top_variant_name"
                      android:textAppearance="@style/TextAppearance.AppCompat.Title"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                      android:text="@string/top_csr" />
            <RelativeLayout android:layout_width="@dimen/service_report_column_width"
                            android:layout_height="@dimen/service_report_column_width">
                <com.github.lzyzsd.circleprogress.DonutProgress
                        android:id="@+id/arena_progress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        custom:donut_progress="0"
                        custom:donut_text_size="0dip"
                        custom:donut_text_color="@android:color/black"
                        custom:donut_finished_color="@color/halo_blue"
                        custom:donut_unfinished_color="@color/halo_lt_grey" />
                <ImageView android:layout_width="@dimen/arena_csr_icon_height"
                           android:layout_height="@dimen/arena_csr_icon_height"
                           android:layout_centerInParent="true"
                           android:paddingTop="16dp"
                           android:id="@+id/csr_image" />
                <TextView android:id="@+id/csr_title"
                          android:gravity="center_horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                          android:layout_below="@id/csr_image" />
            </RelativeLayout>
        </LinearLayout>
        <Space android:layout_width="16dp" android:layout_height="16dp" />
        <LinearLayout android:orientation="vertical"
                      android:layout_width="@dimen/service_report_column_width"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:textAppearance="@style/TextAppearance.AppCompat.Title"
                      android:id="@+id/kdr" />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/kd"
                      android:gravity="center_horizontal"
                      android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:layout_width="8dp" android:layout_height="match_parent" android:background="@color/halo_blue" />
                <Space android:layout_width="8dp" android:layout_height="match_parent" />
                <TextView android:layout_width="0dip"
                          android:text="@string/kills"
                          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                          android:id="@+id/total_kills" />
            </LinearLayout>
            <Space android:layout_width="match_parent" android:layout_height="4dp"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <View android:layout_width="8dp" android:layout_height="match_parent" android:background="@color/halo_lt_grey" />
                <Space android:layout_width="8dp" android:layout_height="match_parent" />
                <TextView android:layout_width="0dip"
                          android:text="@string/deaths"
                          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/total_deaths"
                          android:layout_width="wrap_content"
                          android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                          android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </GridLayout>
</LinearLayout>